fix map marker overlap

--- a/app/assets/stylesheets/bootstrap-tagsinput.css
+++ b/app/assets/stylesheets/bootstrap-tagsinput.css
@@ -3,23 +3,28 @@
   border: 1px solid #ccc;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   display: inline-block;
-  padding: 4px 6px;
+  /*padding: 4px 6px;*/
   margin-bottom: 10px;
   color: #555;
   vertical-align: middle;
   border-radius: 4px;
-  max-width: 100%;
+  max-width: 248px;
   line-height: 22px;
+  padding-top: 4px;
 }
 .bootstrap-tagsinput input {
   border: none;
   box-shadow: none;
   outline: none;
   background-color: transparent;
-  padding: 0;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
   margin: 0;
-  width: 100px !important;
-  max-width: inherit;
+  width: 248px !important;
+  height: 28px;
+  /*max-width: inherit;*/
 }
 .bootstrap-tagsinput input:focus {
   border: none;
@@ -27,8 +32,11 @@
 }
 .bootstrap-tagsinput .tag {
   font-size: 15px;
-  margin-right: 2px;
+  margin-right: 0;
   color: white;
+  padding-bottom: 1px;
+  padding-top: 1px;
+  margin-left: 4px;
 }
 .bootstrap-tagsinput .tag [data-role="remove"] {
   margin-left: 8px;
